Fix styleguide back to deisgn system link on mobile

--- a/src/css/styleguide/layout.css
+++ b/src/css/styleguide/layout.css
@@ -16,12 +16,13 @@
   bottom: 0;
   left: 0;
   z-index: 200;
-  width: 20vw;
+  width: auto;
   max-width: 380px;
   text-align: center;
   background: var(--color-brand-01);
   color: var(--color-text-inverted);
   padding: var(--base-spacing);
+  white-space: nowrap;
 }
 .back-to-design-system:visited {
   color: var(--color-text-inverted);
